--- a/01-tools/11-complex-arith/index.html
+++ b/01-tools/11-complex-arith/index.html
@@ -22,7 +22,7 @@
         <h2>Arithmetic with Complex Numbers</h2>
         <p>
           Let's face it, many of our familiar arithmetic operations such as addition or division simply break when we
-          try to calculate an exact value for statements such as `1 + sqrt (-1)` or `3 / (sqrt (-1))`.
+          try to calculate an exact value for statements such as `(1 + sqrt (-1))` or `3 / (sqrt (-1))`.
         </p>
         <p>
           The only operation that can begin to handle `sqrt (-1)` is multiplication, but even then, we can only fully
