--- a/02-fs/01-convolution-intro/index.html
+++ b/02-fs/01-convolution-intro/index.html
@@ -33,7 +33,7 @@
           twist or rotate".
         </p>
         <p>
-          Therefore, to "convole" literally means to "roll or twist together".
+          Therefore, to "convolve" literally means to "roll or twist together".
         </p>
         <p>
           In the case of audio processing, convolution is the process of examining a signal in order to discover which
@@ -44,10 +44,11 @@
           frequencies) in such a way that the output tells us to what degree the test wave is present in the signal.
         </p>
         <p>
-          If the convolution process generates only a small output, then we can conclude that the signal does not
+          If the convolution process generates a very small output, then we can conclude that the signal does not
           contain a component of this frequency.
-          But if the convolution generates a large output, this tells us not only that we have discovered one of the
-          frequencies present in the sgnal, but also the phase relationship of the test wave to the signal.
+          But if the convolution generates a large output, then we know that not only have we discovered one of the
+          frequencies present in the signal, but we have also discovered the phase relationship of the test wave to the
+          signal.
         </p>
       </td>
     </tr>
