--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
         which a signal is composed.
       </p>
     </li>
+    <li>
+      <h3><a href="./02-fs/02-convolution/index.html">Convolution</a></h3>
+      <p>
+        In the introduction, we looked at what convolution is and how it works in the simplest of cases.
+        Now we will look at a more complex (real life) case.
+      </p>
+    </li>
   </ol>
 
 </body>
