--- a/02-fs/02-convolution/index.html
+++ b/02-fs/02-convolution/index.html
@@ -32,13 +32,11 @@
         </p>
         <p>
           The blue graph below shows a signal that is composed of three sine waves; 6Hz, 9Hz and 11Hz.
-          To keep things simple, each of these frequencies is present at equal magnitudes.
+          To keep things simple, each of these frequencies is present at equal amplitudes.
         </p>
         <p>
-          Now as you change the frequency of the test wave, you'll notice that the integral point stays at (or very
-          close to) zero.
-          When the slider is at 0&deg;, the two waves are "in phase" (I.E. they line up perfectly), but when the slider
-          is at 180&deg;, the two waves are in anti-phase (I.E. they are perfectly mis-aligned).
+          With the test wave set to 5Hz, you'll notice that no matter how you change the test wave's phase, the integral
+          of the convolution curve stays at (or very close to) zero.
         </p>
       </td>
     </tr>
@@ -56,12 +54,12 @@
     <tr>
       <td class="description" style="vertical-align: top;">
         <p>
-          When the frequency of the test wave is set to any value other than 6Hz, 9Hz or 11Hz, notice that the integral
-          of the convolution curves stays at (or very close to) zero
+          Notice that as the frequency of the test wave approaches 6Hz, 9Hz or 11Hz, the integral of the convolution
+          curve starts to grow.
         </p>
         <p>
-          When the test frequency is set to exactly 6Hz, 9Hz or 11Hz, then the integral jumps up to some large value:
-          about `60` in this case.
+          Alternatively, as the frequency of the test wave diverges from 6Hz, 9Hz, or 11Hz, then the integral stays at
+          (or very close to) zero.
         </p>
       </td>
       <td class="description">
