UPdate page title

--- a/02-fs/02-convolution/index.html
+++ b/02-fs/02-convolution/index.html
@@ -19,7 +19,7 @@
   <table class="page-table">
     <tr>
       <th colspan="2">
-        <h1>Convolution</h1>
+        <h1>Convolution Part 1</h1>
       </th>
     </tr>
     <tr>
