--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
       <h3><a href="./02-fs/02-convolution/index.html">Convolution Part 1</a></h3>
       <p>
         In the introduction, we looked at what convolution is and how it works in the simplest of cases.
-        Now we will look at a more complex (real life) case.
+        Now we will look at more realistic case where the frequency of the test wave needs to be adjusted before it
+        matches a frequency within the signal.
       </p>
     </li>
   </ol>
