--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         But what happens if you need to find the square root of a negative number?
       </p>
       <p>
-        For a long time, it was believed that this simple question caused our understanding of arithmetic to break.
+        At first, it was believed that such a problem was impossible to solve because it produced an answer that
+        appeared to be utterly meaningless &mdash; and it also caused our understanding of arithmetic to break.
       </p>
     </li>
     <li>
