--- a/01-tools/10-complex-nums/index.html
+++ b/01-tools/10-complex-nums/index.html
@@ -82,12 +82,12 @@
             90&deg; to the left, then take three more steps"</i>.
         </p>
         <p>
-          This representation is known as the Cartesian Form.
+          This representation is known as the Cartesian or Rectangular Form because the point is described in terms of
+          the lengths of two sides of a right triangle.
         </p>
         <h3>Polar Form</h3>
         <p>
-          However, the Cartesian form always takes us along two sides of the triangle.
-          Couldn't we just walk in a straight line from the origin directly to the point?
+          But can't we just walk in a straight line from the origin directly to the point?
         </p>
         <p>
           We certainly can, but first we need to know both how far we should walk, and second we need to know in which
@@ -112,13 +112,14 @@
                 `h = sqrt (25)`<br>
                 `h = 5`
               </p>
-              <p>So, starting from the origin, we know we have to walk for a distance of `5` steps.
+              <p>
+                So, starting from the origin, we know we have to walk for a distance of `5` steps.
                 We should also bear in mind that all the relationships we're using here are derived from the angles
                 formed inside a circle.
-                That means that the `5` steps we will be taking are along the radius of a circle.
               </p>
               <p>
-                So now we know the distance, but we must still calculate the direction.
+                That means that the `5` steps we will be taking are along the radius of a circle &mdash; but in which
+                direction?
               </p>
             </td>
           </tr>
@@ -165,8 +166,8 @@
           `r e^(i&theta;) = r(cos(&theta;) + i sin(&theta;))`
         </p>
         <p>
-          From the calculation above, we know that `&theta; = 36.87&deg;`, and our radius is `5`, so `4 + 3i` expressed
-          in exponential form is `5e^(36.87&deg;i)`
+          In our example, `&theta; = 36.87&deg;` and `r = 5`, so `4 + 3i` expressed in exponential form is
+          `5e^(36.87&deg;i)`
         </p>
         <p>
           Lastly, we should also note that the angle has been expressed in degrees rather than the more usual radians.
@@ -180,6 +181,11 @@
         <p>
           So using radians, `4 + 3i` expressed in exponential form is `5e^(0.644i)`
         </p>
+        <p>
+          In the graph below, the red dot starts at location `4 + 3i`.
+          As you drag it around, you will see its value in the three different representations change.
+        </p>
+
         <div id="complexBox" class="complexBox"></div>
       </td>
     </tr>
