--- a/02-fs/01-convolution-intro/index.html
+++ b/02-fs/01-convolution-intro/index.html
@@ -25,7 +25,8 @@
     <tr>
       <td class="description" colspan="2">
         <p>
-          <b>To Convole</b>: from the Latin <i>convolvere</i> meaning <i>con</i> = "with" + <i>volvere</i> = "to roll or
+          <b>To Convolve</b>: from the Latin <i>convolvere</i> meaning <i>con</i> = "with" + <i>volvere</i> = "to roll
+          or
           twist".
         </p>
         <p>
@@ -55,7 +56,7 @@
       <td class="description" style="vertical-align: top;">
         <h4>Signal + Test Wave</h4>
         <p>
-          Our signal is the blue wave and the phase shift slider controls a red test wave.
+          The the graph below, the signal is the blue wave and the phase shift slider controls a red test wave.
         </p>
         <p>
           As you move the slider left and right, you are shifting the phase of the red test wave relative to the
@@ -88,32 +89,18 @@
     </tr>
     <tr>
       <td class="description">
-      </td>
-      <td class="description" style="vertical-align: top;">
-        <h4>Integral of Convolution Curve</h4>
         <p>
           The final step is to calculate the area of the green shaded section under the convolution curve.
           In other words, we need to calculate the integral of the convolution curve between 0&deg; and 360&deg;.
         </p>
         <p>
-          The graph below shows how the area under the convolution wave varies depending on the phase and amplitude of
-          the
-          test wave.
+          The graph to the right shows how the area under the convolution wave varies depending on the phase and
+          amplitude of the test wave.
         </p>
-        <div id="areaBox" class="convBox"></div>
       </td>
-    </tr>
-    <tr>
-      <td class="description" colspan="2">
-        <h2>But What Does This Tell Us?</h2>
-        <p>
-          What we learn from this is that when the area under the graph reaches a maximum, not only have we discovered
-          that the signal contains this particular test frequency, but we have also discovered the phase relationship
-          between these two waves.
-        </p>
-        <p>
-          In this case, the maximum area of `180` is reached at `0&deg;` of phase shift.
-        </p>
+      <td class="description" style="vertical-align: top;">
+        <h4>Integral of the Convolution Curve</h4>
+        <div id="areaBox" class="convBox"></div>
       </td>
     </tr>
   </table>
