--- a/02-fs/02-convolution/index.html
+++ b/02-fs/02-convolution/index.html
@@ -52,10 +52,10 @@
       </td>
     </tr>
     <tr>
-      <td class="description" style="vertical-align: top;">
+      <td class="description">
         <p>
-          Notice that as the frequency of the test wave approaches 6Hz, 9Hz or 11Hz, the integral of the convolution
-          curve starts to grow.
+          Now start changing the frequency of the test wave.
+          Notice that as it approaches 6Hz, 9Hz or 11Hz, the integral of the convolution curve starts to grow.
         </p>
         <p>
           Alternatively, as the frequency of the test wave diverges from 6Hz, 9Hz, or 11Hz, then the integral stays at
