--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       </p>
     </li>
     <li>
-      <h3><a href="./02-fs/02-convolution/index.html">Convolution Part 1</a></h3>
+      <h3><a href="./02-fs/02-convolution/index.html">Convolution: Signal With Multiple Frequencies</a></h3>
       <p>
         In the introduction, we looked at what convolution is and how it works in the simplest of cases.
-        Now we will look at more realistic case where the frequency of the test wave needs to be adjusted before it
-        matches a frequency within the signal.
+        Now we will look at somewhat more realistic case where the signal contains multiple frequencies that can be
+        located by varying the frequency of the test wave.
       </p>
     </li>
   </ol>
