Simplify CSS class usage

--- a/02-fs/01-convolution-intro/index.html
+++ b/02-fs/01-convolution-intro/index.html
@@ -81,10 +81,10 @@
     </tr>
     <tr>
       <td class="description">
-        <div id="signalTestBox" class="signalTestBox"></div>
+        <div id="signalTestBox" class="waveBoxHalf"></div>
       </td>
       <td class="description" style="vertical-align: top;">
-        <div id="convBox" class="convBox"></div>
+        <div id="convBox" class="waveBoxHalf"></div>
       </td>
     </tr>
     <tr>
@@ -100,7 +100,7 @@
       </td>
       <td class="description" style="vertical-align: top;">
         <h4>Integral of the Convolution Curve</h4>
-        <div id="areaBox" class="convBox"></div>
+        <div id="areaBox" class="waveBoxHalf"></div>
       </td>
     </tr>
   </table>
