--- a/02-fs/02-convolution/index.html
+++ b/02-fs/02-convolution/index.html
@@ -18,12 +18,12 @@
 <body>
   <table class="page-table">
     <tr>
-      <th colspan="2">
+      <th>
         <h1>Convolution: Signal With Multiple Frequencies</h1>
       </th>
     </tr>
     <tr>
-      <td class="description" colspan="2">
+      <td class="description">
         <h2>Adjusting the Test Wave To Discover Component Frequencies Within the Signal</h2>
         <p>
           Now let's look at what happens when the test wave does not match any frequency in the signal.
@@ -80,19 +80,19 @@
     <tr>
       <td class="description">
         <h4>Signal + Test Wave</h4>
-        <div id="signalTestBox" class="waveBoxWide"></div>
+        <div id="signalTestBox" class="waveBoxFull"></div>
       </td>
     </tr>
     <tr>
       <td class="description">
         <h4>Convolution Curve</h4>
-        <div id="convBox" class="waveBoxWide"></div>
+        <div id="convBox" class="waveBoxFull"></div>
       </td>
     </tr>
     <tr>
       <td class="description">
         <h4>Integral of Convolution Curve</h4>
-        <div id="areaBox" class="waveBoxWide"></div>
+        <div id="areaBox" class="waveBoxFull"></div>
       </td>
     </tr>
     <tr>
